// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`approveToOrg for a 1-team approval, sends teamInvite, clears requestNewUser, sends inviteeApproved 1`] = `
Object {
  "invitation": Array [
    Object {
      "createdAt": 2017-01-01T08:00:00.000Z,
      "email": "<<constant>>",
      "hashedToken": "<<constant>>",
      "id": "<<constant>>",
      "inviteCount": 1,
      "invitedBy": "<<constant>>",
      "teamId": "<<constant>>",
      "tokenExpiration": 2017-01-31T08:00:00.000Z,
      "updatedAt": 2017-01-01T08:00:00.000Z,
    },
  ],
  "notification": Array [
    Object {
      "id": 0,
      "inviteeEmail": 2,
      "inviterName": "Vision",
      "orgId": 4,
      "startAt": 2017-01-01T08:00:00.000Z,
      "teamId": 5,
      "teamName": "Team America",
      "type": "INVITEE_APPROVED",
      "userIds": Array [
        3,
      ],
    },
    Object {
      "id": 1,
      "inviteeEmail": 2,
      "inviterName": "Vision",
      "inviterUserId": 3,
      "orgId": 4,
      "startAt": 2017-01-01T08:00:00.000Z,
      "teamId": 5,
      "teamName": "Team America",
      "type": "TEAM_INVITE",
      "userIds": Array [
        6,
      ],
    },
  ],
  "orgApproval": Array [
    Object {
      "approvedBy": 8,
      "createdAt": 2017-01-01T07:00:00.000Z,
      "email": 2,
      "id": 7,
      "isActive": true,
      "orgId": 4,
      "status": "APPROVED",
      "teamId": 5,
      "updatedAt": 2017-01-01T08:00:00.000Z,
    },
  ],
}
`;

exports[`approveToOrg for a 1-team approval, sends teamInvite, clears requestNewUser, sends inviteeApproved 2`] = `
Object {
  "invitation": Array [
    Object {
      "channelId": 5,
      "message": Object {
        "data": Object {
          "invitationIds": Array [
            42,
          ],
          "inviteeApprovedNotificationIds": Array [
            43,
          ],
          "removedOrgApprovals": Array [
            Object {
              "approvedBy": 44,
              "createdAt": 50,
              "email": 45,
              "id": 46,
              "isActive": true,
              "orgId": 47,
              "status": "APPROVED",
              "teamId": 51,
              "updatedAt": 2017-01-01T08:00:00.000Z,
            },
          ],
          "removedRequestNotifications": "UNTESTED",
          "teamIdFilter": 5,
          "teamInviteNotificationIds": Array [
            49,
          ],
          "type": "ApproveToOrgPayload",
        },
        "mutatorId": undefined,
        "operationId": 0,
      },
    },
  ],
  "notification": Array [
    Object {
      "channelId": 3,
      "message": Object {
        "data": Object {
          "invitationIds": Array [
            42,
          ],
          "inviteeApprovedNotificationIds": Array [
            43,
          ],
          "removedOrgApprovals": Array [
            Object {
              "approvedBy": 44,
              "createdAt": 50,
              "email": 45,
              "id": 46,
              "isActive": true,
              "orgId": 47,
              "status": "APPROVED",
              "teamId": 51,
              "updatedAt": 2017-01-01T08:00:00.000Z,
            },
          ],
          "removedRequestNotifications": "UNTESTED",
          "teamInviteNotificationIds": Array [
            49,
          ],
          "type": "ApproveToOrgPayload",
        },
        "mutatorId": undefined,
        "operationId": 0,
      },
    },
    Object {
      "channelId": 6,
      "message": Object {
        "data": Object {
          "invitationIds": Array [
            42,
          ],
          "inviteeApprovedNotificationIds": Array [
            43,
          ],
          "removedOrgApprovals": Array [
            Object {
              "approvedBy": 44,
              "createdAt": 50,
              "email": 45,
              "id": 46,
              "isActive": true,
              "orgId": 47,
              "status": "APPROVED",
              "teamId": 51,
              "updatedAt": 2017-01-01T08:00:00.000Z,
            },
          ],
          "removedRequestNotifications": "UNTESTED",
          "teamInviteNotificationIds": Array [
            49,
          ],
          "type": "ApproveToOrgPayload",
        },
        "mutatorId": undefined,
        "operationId": 0,
      },
    },
  ],
  "orgApproval": Array [
    Object {
      "channelId": 5,
      "message": Object {
        "data": Object {
          "invitationIds": Array [
            42,
          ],
          "inviteeApprovedNotificationIds": Array [
            43,
          ],
          "removedOrgApprovals": Array [
            Object {
              "approvedBy": 44,
              "createdAt": 50,
              "email": 45,
              "id": 46,
              "isActive": true,
              "orgId": 47,
              "status": "APPROVED",
              "teamId": 51,
              "updatedAt": 2017-01-01T08:00:00.000Z,
            },
          ],
          "removedRequestNotifications": "UNTESTED",
          "teamIdFilter": 5,
          "teamInviteNotificationIds": Array [
            49,
          ],
          "type": "ApproveToOrgPayload",
        },
        "mutatorId": undefined,
        "operationId": 0,
      },
    },
  ],
  "organization": Array [
    Object {
      "channelId": 4,
      "message": Object {
        "data": Object {
          "invitationIds": Array [
            42,
          ],
          "inviteeApprovedNotificationIds": Array [
            43,
          ],
          "removedOrgApprovals": Array [
            Object {
              "approvedBy": 44,
              "createdAt": 50,
              "email": 45,
              "id": 46,
              "isActive": true,
              "orgId": 47,
              "status": "APPROVED",
              "teamId": 51,
              "updatedAt": 2017-01-01T08:00:00.000Z,
            },
          ],
          "removedRequestNotifications": "UNTESTED",
          "teamInviteNotificationIds": Array [
            49,
          ],
          "type": "ApproveToOrgPayload",
        },
        "mutatorId": undefined,
        "operationId": 0,
      },
    },
  ],
}
`;

exports[`approveToOrg for a 2-team approval with different inviters, sends teamInvite, clears requestNewUser, sends inviteeApproved 1`] = `
Object {
  "invitation": Array [
    Object {
      "createdAt": 2017-01-01T08:00:00.000Z,
      "email": "<<constant>>",
      "hashedToken": "<<constant>>",
      "id": "<<constant>>",
      "inviteCount": 1,
      "invitedBy": "<<constant>>",
      "teamId": "<<constant>>",
      "tokenExpiration": 2017-01-31T08:00:00.000Z,
      "updatedAt": 2017-01-01T08:00:00.000Z,
    },
    Object {
      "createdAt": 2017-01-01T08:00:00.000Z,
      "email": "<<constant>>",
      "hashedToken": "<<constant>>",
      "id": "<<constant>>",
      "inviteCount": 1,
      "invitedBy": "<<constant>>",
      "teamId": "<<constant>>",
      "tokenExpiration": 2017-01-31T08:00:00.000Z,
      "updatedAt": 2017-01-01T08:00:00.000Z,
    },
  ],
  "notification": Array [
    Object {
      "id": 0,
      "inviteeEmail": 4,
      "inviterName": "Vision",
      "orgId": 7,
      "startAt": 2017-01-01T08:00:00.000Z,
      "teamId": 8,
      "teamName": "Team America",
      "type": "INVITEE_APPROVED",
      "userIds": Array [
        5,
      ],
    },
    Object {
      "id": 1,
      "inviteeEmail": 4,
      "inviterName": "Vision",
      "inviterUserId": 5,
      "orgId": 7,
      "startAt": 2017-01-01T08:00:00.000Z,
      "teamId": 8,
      "teamName": "Team America",
      "type": "TEAM_INVITE",
      "userIds": Array [
        10,
      ],
    },
    Object {
      "id": 2,
      "inviteeEmail": 4,
      "inviterName": "War Machine",
      "orgId": 7,
      "startAt": 2017-01-01T08:00:00.000Z,
      "teamId": 9,
      "teamName": "team 2",
      "type": "INVITEE_APPROVED",
      "userIds": Array [
        6,
      ],
    },
    Object {
      "id": 3,
      "inviteeEmail": 4,
      "inviterName": "War Machine",
      "inviterUserId": 6,
      "orgId": 7,
      "startAt": 2017-01-01T08:00:00.000Z,
      "teamId": 9,
      "teamName": "team 2",
      "type": "TEAM_INVITE",
      "userIds": Array [
        10,
      ],
    },
  ],
  "orgApproval": Array [
    Object {
      "approvedBy": 13,
      "createdAt": 2017-01-01T07:00:00.000Z,
      "email": 4,
      "id": 11,
      "isActive": true,
      "orgId": 7,
      "status": "APPROVED",
      "teamId": 8,
      "updatedAt": 2017-01-01T08:00:00.000Z,
    },
    Object {
      "approvedBy": 13,
      "createdAt": 2017-01-01T07:00:00.001Z,
      "email": 4,
      "id": 12,
      "isActive": true,
      "orgId": 7,
      "status": "APPROVED",
      "teamId": 9,
      "updatedAt": 2017-01-01T08:00:00.000Z,
    },
  ],
}
`;

exports[`approveToOrg for a 2-team approval with the same inviter, sends teamInvite, clears requestNewUser, sends inviteeApproved 1`] = `
Object {
  "invitation": Array [
    Object {
      "createdAt": 2017-01-01T08:00:00.000Z,
      "email": "<<constant>>",
      "hashedToken": "<<constant>>",
      "id": "<<constant>>",
      "inviteCount": 1,
      "invitedBy": "<<constant>>",
      "teamId": "<<constant>>",
      "tokenExpiration": 2017-01-31T08:00:00.000Z,
      "updatedAt": 2017-01-01T08:00:00.000Z,
    },
    Object {
      "createdAt": 2017-01-01T08:00:00.000Z,
      "email": "<<constant>>",
      "hashedToken": "<<constant>>",
      "id": "<<constant>>",
      "inviteCount": 1,
      "invitedBy": "<<constant>>",
      "teamId": "<<constant>>",
      "tokenExpiration": 2017-01-31T08:00:00.000Z,
      "updatedAt": 2017-01-01T08:00:00.000Z,
    },
  ],
  "notification": Array [
    Object {
      "id": 0,
      "inviteeEmail": 4,
      "inviterName": "Vision",
      "orgId": 6,
      "startAt": 2017-01-01T08:00:00.000Z,
      "teamId": 7,
      "teamName": "Team America",
      "type": "INVITEE_APPROVED",
      "userIds": Array [
        5,
      ],
    },
    Object {
      "id": 1,
      "inviteeEmail": 4,
      "inviterName": "Vision",
      "inviterUserId": 5,
      "orgId": 6,
      "startAt": 2017-01-01T08:00:00.000Z,
      "teamId": 7,
      "teamName": "Team America",
      "type": "TEAM_INVITE",
      "userIds": Array [
        9,
      ],
    },
    Object {
      "id": 2,
      "inviteeEmail": 4,
      "inviterName": "Vision",
      "orgId": 6,
      "startAt": 2017-01-01T08:00:00.000Z,
      "teamId": 8,
      "teamName": "team 2",
      "type": "INVITEE_APPROVED",
      "userIds": Array [
        5,
      ],
    },
    Object {
      "id": 3,
      "inviteeEmail": 4,
      "inviterName": "Vision",
      "inviterUserId": 5,
      "orgId": 6,
      "startAt": 2017-01-01T08:00:00.000Z,
      "teamId": 8,
      "teamName": "team 2",
      "type": "TEAM_INVITE",
      "userIds": Array [
        9,
      ],
    },
  ],
  "orgApproval": Array [
    Object {
      "approvedBy": 12,
      "createdAt": 2017-01-01T07:00:00.000Z,
      "email": 4,
      "id": 10,
      "isActive": true,
      "orgId": 6,
      "status": "APPROVED",
      "teamId": 7,
      "updatedAt": 2017-01-01T08:00:00.000Z,
    },
    Object {
      "approvedBy": 12,
      "createdAt": 2017-01-01T07:00:00.001Z,
      "email": 4,
      "id": 11,
      "isActive": true,
      "orgId": 6,
      "status": "APPROVED",
      "teamId": 8,
      "updatedAt": 2017-01-01T08:00:00.000Z,
    },
  ],
}
`;

exports[`approveToOrg throws if the caller does not own the notification 1`] = `"Unauthorized. User is not a Billing Leader for that organization"`;
